Commented out stylesheets due to errors

--- a/Entrepreneur/style.css
+++ b/Entrepreneur/style.css
@@ -1,4 +1,4 @@
-.company-x-page {
+/* .company-x-page {
     background-color: #ffffff;
     display: flex;
     flex-direction: row;
@@ -312,4 +312,4 @@
     top: 16px;
     width: 11px;
   }
-  
+   */
